Fixup broken GConf key define. Patch from Stephane Demurget.
2008-05-05  A. Walton  <awalton@gnome.org>

	* libnautilus-private/nautilus-global-preferences.h:
	Fixup broken GConf key define. Patch from Stephane Demurget.


svn path=/trunk/; revision=14141

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-05  A. Walton  <awalton@gnome.org>
 
+	* libnautilus-private/nautilus-global-preferences.h:
+	Fixup broken GConf key define. Patch from Stephane Demurget.
+
+2008-05-05  A. Walton  <awalton@gnome.org>
+
 	reviewed by: Cosimo Cecchi
 
 	* libnautilus-private/nautilus-module.c (nautilus_module_load):
