Use text width of 150 pixels in vertical layout mode, instead of 300.
2008-05-07  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Use text width of 150 pixels in vertical layout mode, instead of 300.

svn path=/trunk/; revision=14145

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-07  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Use text width of 150 pixels in vertical layout mode, instead of 300.
+
 2008-05-06  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
