Use the right type for all_columns_have_same_width key in the schemas
2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Use the right type for all_columns_have_same_width key in the
	schemas description file. (#532363).

svn path=/trunk/; revision=14150

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Use the right type for all_columns_have_same_width key in the
+	schemas description file. (#532363).
+
+2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* libnautilus-private/nautilus-dnd.c:
 	(nautilus_drag_file_local_internal), (nautilus_drag_drag_data_get):
 	* libnautilus-private/nautilus-open-with-dialog.c:
