Ellipsize and HIG-ify some menu items. (#335112).
2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-directory-view.c: (select_pattern):
	* src/file-manager/fm-icon-view.c:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-spatial-window.c:
	Ellipsize and HIG-ify some menu items. (#335112).

svn path=/trunk/; revision=14151

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/file-manager/fm-directory-view.c: (select_pattern):
+	* src/file-manager/fm-icon-view.c:
+	* src/nautilus-navigation-window-menus.c:
+	* src/nautilus-spatial-window.c:
+	Ellipsize and HIG-ify some menu items. (#335112).
+
+2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	Use the right type for all_columns_have_same_width key in the
 	schemas description file. (#532363).
