--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
+
+	* es.po: Updated Spanish translation
+
 2008-05-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
