Update for release.
2008-05-13  Martin Wehner  <martin.wehner@gmail.com>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14153

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-13  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release.
+
 2008-05-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/file-manager/fm-directory-view.c: (select_pattern):
