Post release version bump.
2008-05-13  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Post release version bump.

=== nautilus 2.23.2 ===

svn path=/trunk/; revision=14155

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-05-13  Martin Wehner  <martin.wehner@gmail.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.2 ===
+
+2008-05-13  Martin Wehner  <martin.wehner@gmail.com>
+
 	* NEWS:
 	Update for release.
 
