Do not unref displayed file when opening properties window through
2008-05-13  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c
	(action_self_properties_callback):
	* src/file-manager/nautilus-directory-view-ui.xml:
	Do not unref displayed file when opening properties window through
	location or background popup menu. Fix location popup separators.

svn path=/branches/gnome-2-22/; revision=14157

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-05-13  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-directory-view.c
+	(action_self_properties_callback):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Do not unref displayed file when opening properties window through
+	location or background popup menu. Fix location popup separators.
+
 2008-05-08  Federico Mena Quintero  <federico@novell.com>
 
 	Merged from trunk:
