--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-14  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 === nautilus 2.23.2 ===
 
 2008-05-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
