--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-05-14  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c
+	(paste_into_clipboard_received_callback), (paste_into),
+	(action_paste_files_into_callback),
+	(action_location_paste_files_into_callback),
+	(clipboard_targets_received), (real_update_location_menu):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Implement "Paste Into" for location context menu. Always request
+	clipboard contents in real_update_paste_menu().
+
 2008-05-13  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c
