Fix possibly uninitialized variable.
2008-05-17  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-directory-background.c
	(nautilus_file_background_read_desktop_settings):
	Fix possibly uninitialized variable.

svn path=/trunk/; revision=14165

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-17  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-directory-background.c
+	(nautilus_file_background_read_desktop_settings):
+	Fix possibly uninitialized variable.
+
 Fri May 16 23:56:37 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c
