Fix a conflicting accelerator. Patch from Sebastien Bacher. (#442056)
2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-icon-view.c:
	Fix a conflicting accelerator.
	Patch from Sebastien Bacher. (#442056)

svn path=/trunk/; revision=14167

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-icon-view.c:
+	Fix a conflicting accelerator.
+	Patch from Sebastien Bacher. (#442056)
+
 2008-05-17  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-directory-background.c
