--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-19  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-shell.c (open_window):
+	Never maximize windows opened from shell if a custom geometry has been
+	specified. Fixes #92566.
+
 2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/file-manager/fm-icon-view.c:
