--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-05-19  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-shell.c (open_window):
+	Never maximize windows opened from shell if a custom geometry has been
+	specified. Fixes #92566.
+
+2008-05-19  Christian Neumair  <cneumair@gnome.org>
+
 	(from Søren Sandmann <sandmann@redhat.com>, backported from trunk)
 
 	* libnautilus-private/nautilus-directory-background.c
