Ensure that window no longer shows CD contents after CD is ejected.
2008-05-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/nautilus-application.c (mount_removed_callback): Ensure that
	window no longer shows CD contents after CD is ejected. (#531678)


svn path=/trunk/; revision=14176

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-19  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* src/nautilus-application.c (mount_removed_callback): Ensure that
+	window no longer shows CD contents after CD is ejected. (#531678)
+
 2008-05-19  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-file.c (nautilus_file_get_icon):
