Fix a typo that was breaking the image when doing DnD of emblems from the
2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-property-browser.c: (make_drag_image):
	Fix a typo that was breaking the image when doing DnD of
	emblems from the property browser.

svn path=/trunk/; revision=14178

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-property-browser.c: (make_drag_image):
+	Fix a typo that was breaking the image when doing DnD of
+	emblems from the property browser.
+
 2008-05-19  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* src/nautilus-application.c (mount_removed_callback): Ensure that
