--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* docs/Makefile.am:
+	* docs/nautilus-connect-server.1:
+	* docs/nautilus-file-management-properties.1:
+	* docs/nautilus.1:
+	Adds manpages taken from the Debian package. Many thanks to the
+	Debian doc authors for these and for making them available
+	under the GPL license. (#310473 and #501698).
+
+2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-property-browser.c: (make_drag_image):
 	Fix a typo that was breaking the image when doing DnD of
 	emblems from the property browser.
