Initialize autostart to FALSE.
2008-05-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-main.c (main):
	Initialize autostart to FALSE.

svn path=/trunk/; revision=14183

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-22  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-main.c (main):
+	Initialize autostart to FALSE.
+
 2008-05-21  A. Walton  <awalton@gnome.org>
 
 	* */*.[ch]:
