Fix frame size calculation.
2008-05-22  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_icon):
	Fix frame size calculation.

svn path=/branches/gnome-2-22/; revision=14184

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-22  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_get_icon):
+	Fix frame size calculation.
+
 2008-05-19  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-property-browser.c: (make_drag_image):
