Fix frame size calculation.
2008-05-22  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-file.c (nautilus_file_get_icon):
	Fix frame size calculation.

svn path=/trunk/; revision=14185

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-05-22  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-file.c (nautilus_file_get_icon):
+	Fix frame size calculation.
+
+2008-05-22  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-main.c (main):
 	Initialize autostart to FALSE.
 
