Updated Korean translation
svn path=/branches/gnome-2-22/; revision=14187

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-23  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2008-04-24  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Fixed some typos in Macedonian translation.
