--- a/po/ko.po
+++ b/po/ko.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-26 19:32+0900\n"
-"PO-Revision-Date: 2008-02-26 19:37+0900\n"
+"PO-Revision-Date: 2008-05-21 11:44+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -1088,7 +1088,7 @@ msgstr "아무것도 하지 않기"
 #: ../libnautilus-private/nautilus-autorun.c:382
 #: ../nautilus-folder-handler.desktop.in.in.h:1
 msgid "Open Folder"
-msgstr "열기 폴더"
+msgstr "폴더 열기"
 
 #: ../libnautilus-private/nautilus-autorun.c:414
 #: ../src/nautilus-x-content-bar.c:122
@@ -3605,22 +3605,22 @@ msgstr "선택한 볼륨을 초기화합니다"
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6356
 msgid "Mount the volume associated with the open folder"
-msgstr "열기 폴더에 연결된 볼륨을 마운트합니다"
+msgstr "연 폴더에 연결된 볼륨을 마운트합니다"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6360
 msgid "Unmount the volume associated with the open folder"
-msgstr "열기 폴더에 연결된 볼륨을 마운트 해제합니다"
+msgstr "연 폴더에 연결된 볼륨을 마운트 해제합니다"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6364
 msgid "Eject the volume associated with the open folder"
-msgstr "열기 폴더에 연결된 볼륨을 꺼냅니다"
+msgstr "연 폴더에 연결된 볼륨을 꺼냅니다"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6368
 msgid "Format the volume associated with the open folder"
-msgstr "열기 폴더에 연결된 볼륨을 포맷합니다"
+msgstr "연 폴더에 연결된 볼륨을 포맷합니다"
 
 #. name, stock id
 #. label, accelerator
