--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-05-23  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-directory-async.c (seen_inode),
+	(mark_inode_as_seen), (deep_count_one), (deep_count_state_free),
+	(deep_count_load), (deep_count_start):
+	Do not count the same inode twice when calculating size. Fixes
+	#313668.
+
+2008-05-23  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-properties-window.c (set_name_field),
 	(update_name_field), (value_field_update_internal),
 	(attach_title_field), (create_page_with_hbox), (append_blank_row),
