--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-25  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Fixed a small typo.
+
 2008-05-23  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
