--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-28  Christian Neumair  <cneumair@gnome.org>
+
+	* NEWS:
+	Update for release.
+
 2008-05-27  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-icon-dnd.c: (drag_begin_callback):
