--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-29  Christian Neumair  <cneumair@gnome.org>
+
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.22.3 ===
+
 2008-05-28  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
